# pandalchemy

./: .appveyor.yml  .bumpversion.cfg  .cookiecutterrc  .coveragerc  .editorconfig  .ruff.toml  .travis.yml  ASYNC_TESTING_STATUS.md  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  COVERAGE_REPORT.md  FINAL_REPORT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PLAN_IMMUTABLE_INDEX_AUTOINCREMENT.md  README.md  README.rst  REFACTORING_SUMMARY.md  STATUS.md  TEST_SETUP.md  docker-compose.test.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  setup-test-dbs.sh  setup.cfg  setup.py  test.db  test_add.db  test_del.db  tox.ini  verify_installation.py
.tox/bootstrap/: pip-selfcheck.json  pyvenv.cfg
ci/: bootstrap.py
ci/templates/: .appveyor.yml  tox.ini
docs/: ARCHITECTURE.md  conf.py  index.rst  installation.rst  performance.rst  troubleshooting.rst  usage.rst
docs/reference/: api.rst  bamboo.rst  index.rst
examples/: 01_crud_operations.ipynb  02_change_tracking.ipynb  03_composite_primary_keys.ipynb  04_auto_increment.ipynb  05_conditional_operations.ipynb  06_schema_evolution.ipynb  07_transactions.ipynb  08_index_based_primary_keys.ipynb  09_immutable_primary_keys.ipynb  10_pandas_integration.ipynb  11_real_world_ecommerce.ipynb  README.md  advanced_usage.py  basic_usage.py
examples_source/: 01_crud_operations.py  02_change_tracking.py  03_composite_primary_keys.py  04_auto_increment.py  05_conditional_operations.py  06_schema_evolution.py  07_transactions.py  08_index_based_primary_keys.py  09_immutable_primary_keys.py  10_pandas_integration.py  11_real_world_ecommerce.py  README.md
plans/: FULLMETALALCHEMY_IMPROVEMENTS.md  MIGRATION_TO_FULLMETALALCHEMY.md  PANDAS_TO_SQL_FEATURE_PROPOSAL.md
scripts/: convert_source_to_notebooks.py
src/bamboo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/pandalchemy.egg-info/: PKG-INFO  PKG-INFO-Odos’s MacBook Pro  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: POSTGRES_TEST_EXPANSION.md  RUN_POSTGRES_TESTS.md  SCHEMA_EVOLUTION_HANG_ANALYSIS.md  TESTING_MULTI_DB.md  conftest.py  example_multi_db_test.py  table_test.db  test_async.py  test_async_robustness.py  test_auto_increment.py  test_change_tracker.py  test_cli.py  test_column_drop_rollback.py  test_column_type_changes.py  test_complex_relationships.py  test_composite_pk_integration.py  test_concurrent_scenarios.py  test_data_integrity.py  test_edge_cases.py  test_error_recovery.py  test_execution_plan.py  test_immutable_index.py  test_integration.py  test_main.py  test_pandalchemy.py  test_performance.py  test_pk_as_index.py  test_postgres_debug.py  test_postgres_simple.py  test_query_update_patterns.py  test_real_world_workflows.py  test_schema_changes.py  test_schema_evolution_complex.py  test_sql_operations.py  test_to_sql.py  test_tracked_dataframe.py  test_tracked_dataframe_sql_helpers.py  test_transactions.py  test_type_conversions.py  test_utils.py
(+25 files in other folders)
